# mastodon-autodelete

./: .dockerignore  .flake8  Dockerfile  app.py  build.sh  logging.conf  pyproject.toml
